--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.2.4",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.9.0",
         "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.7",
         "vite": "^5.4.19"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.7",
         "pinia": "^3.0.2",
         "vue": "^3.5.14",
         "vue-router": "^4.5.1"
